2000-06-20  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Use  zgetifaddress() for '-L iface:eth0' binding.

	* configure.in, include/libz.h, lib/Makefile.in,
	  lib/selfaddrs.c, lib/zgetifaddress.c:
	    Autoconfigure  BSDI derived  getifaddrs()  call,
	    and have sensible IOCTL set for both interface
	    list, and for interface address lookup code.

	* scheduler/mailq.c:
	    One-off in array realloc() biting us at Solaris..

	* transports/smtp/smtp.c, nam/smtp.8:
	    Coded '-L' option processing to bind to named local
	    interface.

	* lib/selfaddrs.c:
	    Experimental SIOCGLIFCONF code for IPv6 speaking
	    some-BSD systems -- to pick IPv6 interface addresses
	    from the system.

	* transports/smtp/smtp.c, transports/smtp/smtp.h:
	    When doing   getmxrr()  for MX data, will use also
	    the DNS supplied ADDITIONAL DATA segment materiel
	    for MX machine addresses.

2000-06-19  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* scheduler/update.c:
	    Organically relating to  smtpopen() -> "retryat +60"
	    code, if NEXT thing to feed has its expiry tag in
	    past (and non-zero), then *stay* in CFSTATE_STUFFING
	    so that possible next thing will be quickly diagnosed
	    out of the queue at the end of its expiry time..
	    ALSO fixed double-counting of attempts on therads
	    and vertices!

	* transports/smtp/smtp.c:
	    If smtpopen() yields EX_TEMPFAIL, always do diagnostics
	    with 60 seconds timeout flag.. ( -> "retryat +60" )
	    so that the entire message queue will not be retried
	    there just for no good reason..

	* smtpserver/smtptls.c:
	    Following some discussion at OpenSSL list, I noticed
	    that DH type keys are not supported by our current code.
	    Now we should match that of OpenSSL: apps/s_server.c
	    sample code again.

	* transports/smtp/smtp.c:
	    Allow  ssfgets()  to enlarge the input string in runtime,
	    which enables us latter to make weird things like multiple