@@ -56,6 +56,9 @@ router:
 	of   "From: foo%bar <fii@faa.fuu>"  formats causes the scanner
 	to react mistakenly with 'Illegal-Object:'.
 
+	The BIND subset might not handle the 'bigmx.zmailer.org'
+	correctly -- or at all..
+
 
 transports/smtp:
    CHECK:
@@ -234,7 +237,10 @@ transports/smtp:
 
 		This smells like something being wrong at MQ2
 		authentication code, or in what the smtpserver
-		has parsed ...  Weird..
+		has parsed from its conf file...  Weird..
+
+    VERIFY:
+	policy analysis functionality regarding ``bigmx.zmailer.org''
 
     FEATURE:
 	Bind to named interface (pick its address with SIOCG(L)IFADDR)
