@@ -1,3 +1,8 @@
+2000-06-21  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
+
+	* transports/smtp/smtp.c:
+	    Some more tuning of  getmxrr()  pathology processing.
+
 2000-06-20  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
 
 	* transports/smtp/smtp.c:
